@@ -5,17 +5,16 @@ import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeVersion.V38;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_A;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_B;
 import static com.hartwig.hmftools.lilac.LilacConstants.HLA_C;
-import static com.hartwig.hmftools.lilac.ReferenceData.populateHlaTranscripts;
+import static com.hartwig.hmftools.lilac.LilacUtils.calcNucelotideLocus;
+import static com.hartwig.hmftools.lilac.ReferenceData.loadHlaTranscripts;
 
 import static junit.framework.TestCase.assertEquals;
-import static junit.framework.TestCase.assertTrue;
 
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import com.google.common.collect.Maps;
 import com.hartwig.hmftools.common.gene.TranscriptData;
-import com.hartwig.hmftools.lilac.LociPosition;
+import com.hartwig.hmftools.lilac.MhcClass;
 
 import org.junit.Test;
 
@@ -24,60 +23,62 @@ public class LociPositionTest
     @Test
     public void testNucleotideLocus()
     {
-        Map<String, TranscriptData> hlaTranscriptMap = Maps.newHashMap();
-        populateHlaTranscripts(hlaTranscriptMap, V37);
-        LociPosition lociPosition = new LociPosition(hlaTranscriptMap.values().stream().collect(Collectors.toList()));
+        Map<String,TranscriptData> hlaTranscriptMap = loadHlaTranscripts(V37, MhcClass.CLASS_1);
+
+        List<TranscriptData> transcripts = hlaTranscriptMap.values().stream().toList();
 
         TranscriptData aTranscript = hlaTranscriptMap.get(HLA_A);
 
-        int locus = lociPosition.calcNucelotideLocus(aTranscript.CodingStart);
+        int locus = calcNucelotideLocus(transcripts, aTranscript.CodingStart);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(aTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, aTranscript.CodingEnd);
         assertEquals(1097, locus);
 
         TranscriptData bTranscript = hlaTranscriptMap.get(HLA_B);
 
-        locus = lociPosition.calcNucelotideLocus(bTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, bTranscript.CodingEnd);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(bTranscript.CodingStart);
+        locus = calcNucelotideLocus(transcripts, bTranscript.CodingStart);
         assertEquals(1088, locus);
 
         TranscriptData cTranscript = hlaTranscriptMap.get(HLA_C);
 
-        locus = lociPosition.calcNucelotideLocus(cTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, cTranscript.CodingEnd);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(cTranscript.CodingStart);
+        locus = calcNucelotideLocus(transcripts, cTranscript.CodingStart);
         assertEquals(1100, locus);
 
         hlaTranscriptMap.clear();
-        populateHlaTranscripts(hlaTranscriptMap, V38);
-        lociPosition = new LociPosition(hlaTranscriptMap.values().stream().collect(Collectors.toList()));
+
+        hlaTranscriptMap = loadHlaTranscripts(V38, MhcClass.CLASS_1);
+
+        transcripts = hlaTranscriptMap.values().stream().toList();
 
         aTranscript = hlaTranscriptMap.get(HLA_A);
 
-        locus = lociPosition.calcNucelotideLocus(aTranscript.CodingStart);
+        locus = calcNucelotideLocus(transcripts, aTranscript.CodingStart);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(aTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, aTranscript.CodingEnd);
         assertEquals(1097, locus);
 
         bTranscript = hlaTranscriptMap.get(HLA_B);
 
-        locus = lociPosition.calcNucelotideLocus(bTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, bTranscript.CodingEnd);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(bTranscript.CodingStart);
+        locus = calcNucelotideLocus(transcripts, bTranscript.CodingStart);
         assertEquals(1088, locus);
 
         cTranscript = hlaTranscriptMap.get(HLA_C);
 
-        locus = lociPosition.calcNucelotideLocus(cTranscript.CodingEnd);
+        locus = calcNucelotideLocus(transcripts, cTranscript.CodingEnd);
         assertEquals(0, locus);
 
-        locus = lociPosition.calcNucelotideLocus(cTranscript.CodingStart);
+        locus = calcNucelotideLocus(transcripts, cTranscript.CodingStart);
         assertEquals(1100, locus);
 
     }
